<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="clip_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:background="@drawable/bricks_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="5dp"
                android:textSize="20sp"
                android:text="@string/score_title"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/scoreValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/_0"/>
        </LinearLayout>
        <GridLayout
            android:layout_gravity="center"
            android:id="@+id/gameArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:layout_marginHorizontal="10dp"
                    android:width="120dp"
                    android:id="@+id/btnLeft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/left"/>
                <Button
                    android:width="120dp"
                    android:id="@+id/btnFlip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rotate"/>
                <Button
                    android:layout_marginHorizontal="10dp"
                    android:width="120dp"
                    android:id="@+id/btnRight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/right"/>
            </LinearLayout>
            <Button
                android:layout_marginHorizontal="10dp"
                android:width="120dp"
                android:id="@+id/btnDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down"/>
        </LinearLayout>
    </LinearLayout>
</layout>

